# mykrok

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REUSE.toml  athletes.tsv  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tox.ini
.datalad/: config
.github/workflows/: ci.yml  gh-pages.yaml
.specify/memory/: constitution.md
assets/map-browser/: map-browser.js
athl=alice/: sessions.tsv
athl=alice/ses=20240810T063000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20240901T080000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241015T090000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241120T170000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241128T073000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241208T080000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241210T060000/: info.json
athl=alice/ses=20241212T183000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241215T070000/: info.json  tracking.json  tracking.parquet
athl=alice/ses=20241218T063000/: info.json  tracking.json  tracking.parquet
athl=bob/: sessions.tsv
athl=bob/ses=20241125T090000/: info.json  tracking.json  tracking.parquet
athl=bob/ses=20241205T173000/: info.json  tracking.json  tracking.parquet
athl=bob/ses=20241214T080000/: info.json  tracking.json  tracking.parquet
athl=bob/ses=20241216T070000/: info.json  tracking.json  tracking.parquet
athl=bob/ses=20241218T063000/: info.json  tracking.json  tracking.parquet
docs/: changelog.md  index.md  tox-vs-hatch-comparison.md  tox-vs-hatch-summary-final.md
docs/explanation/: architecture.md  index.md  no-backend.md
docs/how-to/: automate-sync.md  export-fittrackee.md  index.md  publish-github.md  recover-photos.md  serve-with-apache.md  use-datalad.md
docs/prompts/: 20251219-1.txt
docs/reference/: cli.md  configuration.md  data-model.md  index.md
docs/screenshots/: .gitkeep
docs/tutorials/: exploring-your-data.md  getting-started.md  index.md
features/multi-athlete/: plan.md
features/unified-frontend/: plan.md  spec.md
scripts/: generate_screenshots.py
specs/001-mykrok/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing.md
specs/001-mykrok/checklists/: release.md  requirements.md
specs/001-mykrok/contracts/: cli.md
specs/001-strava-backup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-strava-backup/checklists/: release.md  requirements.md
specs/001-strava-backup/contracts/: cli.md
src/mykrok/: __init__.py  cli.py
src/mykrok/assets/map-browser/: map-browser.js
src/mykrok/lib/: logging.py
src/mykrok/models/: activity.py
src/mykrok/services/: backup.py  datalad.py  migrate.py
src/mykrok/views/: map.py
src/strava_backup/: __init__.py  __main__.py  cli.py  config.py
src/strava_backup/assets/map-browser/: map-browser.js
src/strava_backup/lib/: gpx.py  logging.py  parquet.py  paths.py
src/strava_backup/models/: activity.py  athlete.py  state.py  tracking.py
src/strava_backup/services/: backup.py  datalad.py  fittrackee.py  gh_pages.py  migrate.py  rate_limiter.py  strava.py
src/strava_backup/views/: __init__.py  browser.py  map.py  stats.py
tests/: __init__.py  conftest.py
tests/cli/: test_create_browser.py  test_gpx.py  test_rebuild_sessions.py  test_rebuild_timezones.py  test_view_stats.py
tests/e2e/: conftest.py  test_unified_frontend.py
tests/e2e/fixtures/: generate_fixtures.py
tests/integration/: __init__.py  test_strava_api.py
tests/js/: date-utils.test.js  tsv-utils.test.js  url-state.test.js
tests/unit/: __init__.py  test_activity.py  test_backup.py  test_config.py  test_datalad.py  test_fittrackee.py  test_gh_pages.py  test_gpx.py  test_map_photos.py  test_migrate.py  test_models.py  test_paths.py  test_retry_queue.py
