[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mykrok"
dynamic = ["version"]
description = "CLI tool to backup fitness activities with incremental sync, map visualization, and export (Strava supported)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["strava", "backup", "fitness", "gpx", "fittrackee", "mykrok"]
authors = [
    { name = "MyKrok contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "stravalib>=2.0",
    "pyarrow>=14.0",
    "requests>=2.28",
    "duckdb>=0.9",
    "click>=8.0",
    "datalad>=1.0",
    "tomlkit>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
timezone = [
    "timezonefinder>=6.0",
]
full = [
    "mykrok[timezone]",
    # Add more user-facing extras here as they are created
]
test = [
    "mykrok[full]",  # Include all optional features for full test coverage
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-docker>=2.0",
    "responses>=0.23",
]
devel = [
    "mykrok[test]",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
    "hatch>=1.9.0",
    "pre-commit>=3.0",
    "codespell>=2.2",
]
e2e = [
    "mykrok[test]",
    "pytest-playwright>=0.4.0",
]
ci = [
    "mykrok[devel]",
    # hatch is included via devel, no extra CI plugin needed
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
mykrok = "mykrok.cli:main"

[project.urls]
Homepage = "https://github.com/mykrok/mykrok"
Documentation = "https://mykrok.github.io/mykrok/"
Repository = "https://github.com/mykrok/mykrok"
Issues = "https://github.com/mykrok/mykrok/issues"

[tool.hatch.build]
exclude = [
    # VCS and editor
    ".git",
    ".gitignore",
    # Build/cache directories
    ".cache",
    ".tox",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".local",
    "*.egg-info",
    "__pycache__",
    "dist",
    "build",
    # Project-specific non-essential
    ".claude",
    ".datalad",
    ".specify",
    ".noannex",
    "CLAUDE.md",
    "docs",
    "specs",
    "logs",
    "*.log",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mykrok"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mykrok/_version.py"

# Include bundled JavaScript/CSS assets for lightweight map generation
[tool.hatch.build.targets.wheel.force-include]
"src/mykrok/assets" = "mykrok/assets"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = ["src/mykrok/_version.py"]  # Generated by hatch-vcs

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["mykrok"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "stravalib.*",
    "pyarrow.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "ai_generated: marks tests as AI-generated",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/mykrok"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# =============================================================================
# Hatch Environment Configuration
# =============================================================================

# Default test environment with Python version matrix
[tool.hatch.envs.hatch-test]
# Run all tests (unit + integration) by default, matching old tox behavior
default-args = ["tests/unit", "tests/integration"]
# Install project with all optional features for full test coverage
features = ["full"]
extra-dependencies = [
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-docker>=2.0",
    "responses>=0.23",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.hatch-test.scripts]
# Default run script used by `hatch test`
run = "pytest {args:tests/unit tests/integration}"
run-cov = "pytest --cov=mykrok --cov-report=term-missing --cov-report=xml:coverage.xml {args:tests/unit tests/integration}"
# Stubs for hatch test --cover multi-env scripts (we use single env)
cov-combine = "true"
cov-report = "true"
# For running specific test subsets manually
unit = "pytest tests/unit/ {args}"
integration = "pytest tests/integration/ {args}"

# Lint environment (detached - no project install needed)
[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.1.0",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check src/ tests/"
format = "ruff format src/ tests/"
fix = "ruff check --fix src/ tests/"

# Type checking environment
[tool.hatch.envs.types]
# Not detached - needs project deps for mypy to resolve types
dependencies = [
    "mypy>=1.0",
    "types-requests",
]

[tool.hatch.envs.types.scripts]
check = "mypy --ignore-missing-imports src/mykrok/"

# Integration tests
[tool.hatch.envs.integration]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-docker>=2.0",
    "responses>=0.23",
]

[tool.hatch.envs.integration.scripts]
run = "pytest tests/integration/ {args}"

# JavaScript environment (detached)
[tool.hatch.envs.js]
detached = true
skip-install = true

[tool.hatch.envs.js.scripts]
lint = "npm install --silent && npm run lint"
test = "npm install --silent && npm test"
all = "npm install --silent && npm run lint && npm test"

# E2E tests with Playwright
[tool.hatch.envs.e2e]
dependencies = [
    "pytest>=7.0",
    "pytest-playwright>=0.4.0",
]

[tool.hatch.envs.e2e.env-vars]
PLAYWRIGHT_BROWSERS_PATH = "{env:PLAYWRIGHT_BROWSERS_PATH:}"

[tool.hatch.envs.e2e.scripts]
install-browsers = "playwright install chromium"
run = "pytest tests/e2e/ {args:-v}"

# Screenshots generation
[tool.hatch.envs.screenshots]
dependencies = [
    "pytest>=7.0",
    "pytest-playwright>=0.4.0",
]

[tool.hatch.envs.screenshots.scripts]
generate = "python scripts/generate_screenshots.py {args:--print-readme}"

# Documentation
[tool.hatch.envs.docs]
detached = true
dependencies = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve"

# GitHub Pages
[tool.hatch.envs.gh-pages]
dependencies = [
    "pytest>=7.0",
    "pytest-playwright>=0.4.0",
]

[tool.hatch.envs.gh-pages.scripts]
generate = "mykrok gh-pages {args}"
